<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/FL">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content"
        android:scaleType="fitXY"
        android:src="@drawable/live" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hey_there"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/hey_there"
                    android:textColor="#FFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/write_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/write_up2"
                    android:textColor="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/but_background"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="7dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="18dp"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/but_background"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="7dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="18dp"
                    android:textColor="#FFF"
                    android:textColorHint="#FFF" />

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/sign_in_button"
                    android:text="@string/sign_in_button"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/sign_in_with_facebook"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:text="@string/register_text"
                    android:textColor="#FFF" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>